--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ authors = [
     {name = "Kaio Felipe",email = "kaio.cavalcante.81651@a.fecaf.com.br"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "pandas (>=2.3.2,<3.0.0)",
-    "minio (>=7.2.16,<8.0.0)"
+    "minio (>=7.2.16,<8.0.0)",
+    "clickhouse-connect (>=0.8.18,<0.9.0)"
 ]
 
 
