--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.12,<4.0"
 dependencies = [
     "pandas (>=2.3.2,<3.0.0)",
     "minio (>=7.2.16,<8.0.0)",
-    "clickhouse-connect (>=0.8.18,<0.9.0)"
+    "clickhouse-connect (>=0.8.18,<0.9.0)",
+    "streamlit (>=1.49.1,<2.0.0)"
 ]
 
 
