--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "pandas (>=2.3.2,<3.0.0)",
     "minio (>=7.2.16,<8.0.0)",
     "clickhouse-connect (>=0.8.18,<0.9.0)",
-    "streamlit (>=1.49.1,<2.0.0)"
+    "streamlit (>=1.49.1,<2.0.0)",
+    "plotly (>=6.3.0,<7.0.0)"
 ]
 
 
